javadoc extended and added